--- a/DoAn_DatDoAn/app/build.gradle
+++ b/DoAn_DatDoAn/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     compile 'com.github.ceryle:RadioRealButton:v2.1.1'
     compile 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
     compile 'com.bigbangbutton:editcodeview:1.0.4'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 }
